SDKs/googleapis.com/adexchangebuyer/v1.3/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.AdexchangebuyerAccountsGetRequest{
        Security: operations.AdexchangebuyerAccountsGetSecurity{
            Oauth2: shared.SchemeOauth2{
                Authorization: "Bearer YOUR_ACCESS_TOKEN_HERE",
            }
            Oauth2c: shared.SchemeOauth2c{
                Authorization: "Bearer YOUR_ACCESS_TOKEN_HERE",
            },
        },
        PathParams: operations.AdexchangebuyerAccountsGetPathParams{
            ID: 5544575166878453129,
        },
        QueryParams: operations.AdexchangebuyerAccountsGetQueryParams{
            Alt: "json",
            Fields: "corporis",
            Key: "et",
            OauthToken: "molestiae",
            PrettyPrint: true,
            QuotaUser: "sed",
            UserIP: "voluptatibus",
        },
    }
    
    res, err := s.Accounts.AdexchangebuyerAccountsGet(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.Account != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### accounts

* `AdexchangebuyerAccountsGet` - Gets one account by ID.
* `AdexchangebuyerAccountsList` - Retrieves the authenticated user's list of accounts.
* `AdexchangebuyerAccountsPatch` - Updates an existing account. This method supports patch semantics.
* `AdexchangebuyerAccountsUpdate` - Updates an existing account.

### billingInfo

* `AdexchangebuyerBillingInfoGet` - Returns the billing information for one account specified by account ID.
* `AdexchangebuyerBillingInfoList` - Retrieves a list of billing information for all accounts of the authenticated user.

### budget

* `AdexchangebuyerBudgetGet` - Returns the budget information for the adgroup specified by the accountId and billingId.
* `AdexchangebuyerBudgetPatch` - Updates the budget amount for the budget of the adgroup specified by the accountId and billingId, with the budget amount in the request. This method supports patch semantics.
* `AdexchangebuyerBudgetUpdate` - Updates the budget amount for the budget of the adgroup specified by the accountId and billingId, with the budget amount in the request.

### creatives

* `AdexchangebuyerCreativesGet` - Gets the status for a single creative. A creative will be available 30-40 minutes after submission.
* `AdexchangebuyerCreativesInsert` - Submit a new creative.
* `AdexchangebuyerCreativesList` - Retrieves a list of the authenticated user's active creatives. A creative will be available 30-40 minutes after submission.

### directDeals

* `AdexchangebuyerDirectDealsGet` - Gets one direct deal by ID.
* `AdexchangebuyerDirectDealsList` - Retrieves the authenticated user's list of direct deals.

### performanceReport

* `AdexchangebuyerPerformanceReportList` - Retrieves the authenticated user's list of performance metrics.

### pretargetingConfig

* `AdexchangebuyerPretargetingConfigDelete` - Deletes an existing pretargeting config.
* `AdexchangebuyerPretargetingConfigGet` - Gets a specific pretargeting configuration
* `AdexchangebuyerPretargetingConfigInsert` - Inserts a new pretargeting configuration.
* `AdexchangebuyerPretargetingConfigList` - Retrieves a list of the authenticated user's pretargeting configurations.
* `AdexchangebuyerPretargetingConfigPatch` - Updates an existing pretargeting config. This method supports patch semantics.
* `AdexchangebuyerPretargetingConfigUpdate` - Updates an existing pretargeting config.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
